# continious_learning

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  trainer.py
backbone/: adaptive_tosca.py  linears.py  vit_tosca.py
exps/: tosca_adapter_gating_cifar.json  tosca_cifar.json  tosca_cifar_gate.json  tosca_cub.json  tosca_ina.json  tosca_inr.json  tosca_inr_gate.json  tosca_omni.json  tosca_vtab.json
models/: adaptive_gating_tosca.py  base.py  tosca.py
utils/: data.py  data_manager.py  factory.py  gating.py  inc_net.py  toolkit.py
