[project]
name = "tosca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easydict>=1.13",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scipy>=1.17.1",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
